@@ -7,6 +7,7 @@
 ::
 :: JAVA_OPTIONS
 ::   Extra options to pass to the JVM
+::
 
 :: ----- Verify and Set Required Environment Variables -------------------------
 
@@ -18,13 +19,22 @@ goto end
 :: ----- Check System Properties -----------------------------------------------
 
 if not "%JAVA_OPTIONS%" == "" goto gotJavaOptions
-set JAVA_OPTIONS="-Xmx512M -Xms32M"
-:: set JAVA_OPTIONS="-Xmx512M -Xms32M -Xrunhprof:heap=all,cpu=samples,thread=y,depth=3"
+set JAVA_OPTIONS=-Xms32M -Xmx512M
 :gotJavaOptions
+
+::set JAVA_ARGS=-Xdebug -Xrunjdwp:transport=dt_socket,address=8000,server=y,suspend=n
+::set JAVA_ARGS=-Xrunhprof:heap=all,cpu=samples,thread=y,depth=3
+::set JAVA_ARGS=-Dcom.sun.management.jmxremote
 
 :: ----- Set Up The Classpath --------------------------------------------------
 
-"%JAVA_HOME%\bin\java.exe" %JAVA_OPTIONS% -classpath .\lib\gadget.jar -Djava.endorsed.dirs=.\lib\endorsed -Dorg.xml.sax.parser=org.apache.xerces.parsers.SAXParser Gadget %1 %2 %3 %4 %5 %6 %7 %8 %9
+set CP=.\tools\loader\classes
+set MAIN=edu.mit.simile.gadget.Gadget
 
-set JAVA_OPTIONS=
+"%JAVA_HOME%\bin\java.exe" %JAVA_OPTIONS% %JAVA_ARGS% -classpath "%CP%" -Dorg.xml.sax.parser=org.apache.xerces.parsers.SAXParser -Dloader.jar.repositories=target -Dloader.main.class=%MAIN% Loader %1 %2 %3 %4 %5 %6 %7 %8 %9
+
+:: ----- End -------------------------------------------------------------------
+
+:end
+set CP=
 
